2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Define the Automake conditional CROSS_COMPILING.
	* doc/Makefile.am (poke-settings.texi): Rule to use when
	cross-compiling.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (pk_vprintf): Use pk_puts.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am (poke.1): Revert last change.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am (poke.1): Add -q to poke invocation.
	* doc/Makefile.am (poke-settings.texi): Likewise.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_call_node_handlers): Do not continue
	applying handlers to rewritten nodes, unless the rewritten node is
	explicitly restarted by the phase handler that created it.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.h: NOte that changing PKL_PASS_NODE is
	possible, but only in post-order handlers.
	* libpoke/pkl-pass.c (pkl_do_pass_1): Add assertion to make sure
	pre-order handlers do not replace the node being processed.

2022-01-31  Alfred M. Szmidt  <ams@gnu.org>

	* doc/gen-pvm-insns.sh: Try not to use hard coded location for
	bash.
	* doc/Makefile.am (pvm-insns.texi): Don't create file if the
	command to create it failed.
	(poke.text): Remove redundant mv/rm.

2022-01-30  Bruno Haible  <bruno@clisp.org>

	Update the pager automatically when the window height changes.
	* bootstrap.conf (gnulib_modules): Add sys_ioctl.
	* poke/pk-term.c: Include <signal.h>, <sys/ioctl.h>.
	(screen_lines, screen_cols): Mark as volatile.
	(update_screen_dimensions, sigwinch_handler): New functions.
	(orig_sigwinch_action): New variable.
	(install_sigwinch_handler, uninstall_sigwinch_handler): New functions.
	(pk_term_init): Make sure to get the screen dimensions. Invoke
	install_sigwinch_handler.
	(pk_term_shutdown): Invoke uninstall_sigwinch_handler.

2022-01-30  Bruno Haible  <bruno@clisp.org>

	Prefer terminfo over termcap when both are available.